# Quick_Tabs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  links.txt
commands/: add.rs  aliases.rs  detect.rs  launch.rs  links.rs  list.rs  mod.rs
src/: find_browsers.rs  launcher.rs  main.rs
