[package]
name = "quick_tabs"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
shellexpand = "2.1"

# platform-specific dependency for Windows registry access
[target.'cfg(windows)'.dependencies]
winreg = "0.10"
